# mtc

./: .gitignore  AST.hs  MTC.cabal  Main.hs  README.md  TAM.hs  fact.mt  mt.vim  pythag.mt
examples/: ack.mt  ack.tam  exp.mt  exp.tam  fact.mt  fact.tam  fib.mt  fib.tam  hailstone.mt  hailstone.tam  mpmp.mt  mpmp.tam  prime.mt  prime.tam  primes.mt  primes.tam  pythag.mt  pythag.tam
src/: AST.hs  CodeGen.hs  Display.hs  Lexer.hs  LexerMT.hs  Main.hs  Parser.hs  ParserLib.hs  ParserMT.hs  SrcPos.hs  TAM.hs  TreePrint.hs  TypeCheck.hs
