cabal-version:       >= 2.0

name:                MTC
version:             0.1.0.0
author:              Colm Baston
maintainer:          colm.baston@nottingham.ac.uk
build-type:          Simple

executable mtc
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SrcPos,
                       ParserLib,
                       AST,
                       LexerMT,
                       ParserMT,
                       CodeGen,
                       TAM
  build-depends:       base         ^>= 4.14,
                       containers   ^>= 0.6,
                       array        ^>= 0.5,
                       transformers ^>= 0.5,
                       filepath     ^>= 1.4
